k8s/talos/apps/headroom/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headroom
  annotations:
    volsync.backube/privileged-movers: "true"
