k8s/talos/apps/headroom/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headroom
  namespace: headroom
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - headroom.local.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headroom-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
