k8s/talos/apps/headroom/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: headroom-policy
  namespace: headroom
spec:
  endpointSelector:
    matchLabels:
      app: headroom
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "3001"
              protocol: TCP
    - fromEntities:
        - host
        - health
